--- a/views/admin/show.ejs
+++ b/views/admin/show.ejs
@@ -22,6 +22,7 @@
                         </ul>
               </li>
      </ul>
+     <a class='logout' href='/endSession'>Log out</a>
   </div>
 </div>
 
