--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,8 +20,8 @@
       as you would normally: using <link/> tags.
       
     -->
-    <link rel="stylesheet" type="text/css" href="/styles/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="/styles/monitor.css" />
+    <link rel="stylesheet" type="text/css" href="<%=process.staticContentUrl%>/styles/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="<%=process.staticContentUrl%>/styles/monitor.css" />
 
     <!--
 
@@ -61,10 +61,10 @@
     <script type="text/javascript" src="/js/app.js"></script>-->
 
 
-    <script type="text/javascript" src="/js/jquery.js"></script>
-    <script type="text/javascript" src="/js/monitor.js"></script>
-    <script type="text/javascript" src="/js/bootstrap.js"></script>
-    <script type="text/javascript" src="/js/jscharts.js"></script>
+    <script type="text/javascript" src="<%=process.staticContentUrl%>/js/jquery.js"></script>
+    <script type="text/javascript" src="<%=process.staticContentUrl%>/js/monitor.js"></script>
+    <script type="text/javascript" src="<%=process.staticContentUrl%>/js/bootstrap.js"></script>
+    <script type="text/javascript" src="<%=process.staticContentUrl%>/js/jscharts.js"></script>
 
     <!-- Your scripts here? -->
     <!-- Your scripts here? -->
