--- a/assets/front-monitor/styles/monitor.css
+++ b/assets/front-monitor/styles/monitor.css
@@ -46,6 +46,16 @@ body {
 	margin: 0 5px;
 }
 
+#main .header .refine span {
+	text-transform: uppercase;
+	font-size: 85%;
+	margin: 0 5px 0 20px;
+}
+
+#main .header .refine .btn {
+	margin-left: 20px;
+}
+
 #main table .header {
 	background: ;
 }
@@ -158,4 +168,11 @@ box-shadow:         7px 7px 5px rgba(50, 50, 50, 0.75);
 .frame-login .message {
 	float: left;
 	margin-left: 20px;
+}
+
+
+table .details {
+	width: 35px;
+	padding-left:0; 
+	padding-right:0; 
 }
