--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -61,10 +61,10 @@
     <script type="text/javascript" src="/js/app.js"></script>-->
 
 
-    <script type="text/javascript" src="<%=process.staticContentUrl%>/js/jquery.js"></script>
-    <script type="text/javascript" src="<%=process.staticContentUrl%>/js/monitor.js"></script>
-    <script type="text/javascript" src="<%=process.staticContentUrl%>/js/bootstrap.js"></script>
-    <script type="text/javascript" src="<%=process.staticContentUrl%>/js/jscharts.js"></script>
+    <script type="text/javascript" src="<%=process.staticContentUrl%>js/jquery.js"></script>
+    <script type="text/javascript" src="<%=process.staticContentUrl%>js/monitor.js"></script>
+    <script type="text/javascript" src="<%=process.staticContentUrl%>js/bootstrap.js"></script>
+    <script type="text/javascript" src="<%=process.staticContentUrl%>js/jscharts.js"></script>
 
     <!-- Your scripts here? -->
     <!-- Your scripts here? -->
