--- a/views/admin/show.ejs
+++ b/views/admin/show.ejs
@@ -1,31 +1,4 @@
-<div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="navbar-inner">
-     <a class="brand" href="#">FrontMonitor</a>
-     <ul class='nav' id='applications'>
-             <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-id='<%= params.application %>'> <%= applications[params.application].name %><b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                          <% _.each(applications, function (app) { %>
-                          <li><a href="#" data-id="<%= app.id %>"><%= app.name %></a></li>
-                          <% }) %>
-                        </ul>
-              </li>
-     </ul>
-     
-     <ul class='nav' id='timestamps'>
-             <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-id='<%= params.timeframe %>'> <%= timeframes[params.timeframe].description %><b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                          <% _.each(timeframes, function (timeframe) { %>
-                          <li><a href="#" data-id="<%= timeframe.code %>"><%= timeframe.description %></a></li>
-                          <% }) %>
-                        </ul>
-              </li>
-     </ul>
-     <a class='logout' href='/front-monitor/endSession'>Log out</a>
-  </div>
-</div>
-
+<% include ../partial/header %>
 
 <div class='container row show-grid'>
     
