--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -62,6 +62,7 @@
 
 
     <script type="text/javascript" src="<%=process.staticContentUrl%>js/jquery.js"></script>
+    <script type="text/javascript" src="<%=process.staticContentUrl%>js/rules.js"></script>
     <script type="text/javascript" src="<%=process.staticContentUrl%>js/monitor.js"></script>
     <script type="text/javascript" src="<%=process.staticContentUrl%>js/bootstrap.js"></script>
     <script type="text/javascript" src="<%=process.staticContentUrl%>js/jscharts.js"></script>
